log/build_2020-08-07_16-51-40/main/stdout_stderr 2.log
Scanning dependencies of target main
[ 20%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
[ 40%] Building CXX object CMakeFiles/main.dir/src/calculate.cpp.o
[ 60%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:6:13: error: return type of out-of-line definition of 'Calc::degree_improve' differs from that in the declaration
float Calc::degree_improve(float degree){
~~~~~       ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:13:7: note: previous declaration is here
        void degree_improve(float degree);
        ~~~~ ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:15:13: error: return type of out-of-line definition of 'Calc::degree_atan2' differs from that in the declaration
float Calc::degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2){
~~~~~       ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:15:7: note: previous declaration is here
        void degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2);
        ~~~~ ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:43:13: error: out-of-line definition of 'distance_calc' does not match any declaration in 'Calc'; did you mean 'distace_calc'?
float Calc::distance_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2){
            ^~~~~~~~~~~~~
            distace_calc
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:19:8: note: 'distace_calc' declared here
        float distace_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2);
              ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
3 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/calculate.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
1 warning generated.
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
